# AI-Operations-center

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
ai_ops_center/: __init__.py  api.py  approval_processor.py  approvals.py  audit50.py  auth.py  benchmark.py  brain_bus.py  brain_catalog.py  brain_identity.py  brain_personality_policy.py  brain_runtime_profile.py  business_os.py  cli.py  codex_handoff.py  codex_pipeline.py  collaboration.py  config.py  connectivity.py  db.py  device_gateway.py  enterprise_features.py  factory.py  failover.py  flowise.py  github_defaults.py  health.py  integrations.py  llm_mesh.py  migrations.py  model_router.py  model_workflows.py  node_contract.py  node_mesh.py  operator_requests.py  ops2.py  orchestrator.py  pet_capability_certification.py  pet_catalog.py  pet_conversation_actions.py  (+19 more)
config/: agents.yaml  ai_factory.yaml  brain_feature_catalog_v1.json  device_aliases.yaml  integrations.yaml  llm_mesh.yaml  machines.yaml  operations_2.yaml  pet_feature_catalog_v1.json  revenue_strategy.yaml  ssh_nodes.yaml  tailscale-grants-ai-ops.example.hujson  tailscale_inventory.example.yaml
dashboard/: PET_MOTION_HANDOFF.md  app.js  index.html  styles.css
docker/: add-brain-authorized-key-admin.ps1  audit-laptop-unblock.ps1  audit-live-release.ps1  audit_brain_feature_catalog.py  audit_pet_instruction_replay.py  audit_queue_protocol.py  benchmark-network.ps1  brain-bootstrap.ps1  check-brain.ps1  configure-brain-firewall-admin.ps1  configure-brain-firewall.ps1  configure-git-remote.ps1  (+63 more)
(+134 files in other folders)
