[project]
name = "ai-ops-center"
version = "0.1.0"
description = "Distributed AI Operations Center for productivity and revenue automation"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "pyyaml>=6.0",
  "psycopg[binary]>=3.2",
  "python-dotenv>=1.0",
  "httpx>=0.27"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
